--- a/app/src/main/res/layout/dialog_transaction.xml
+++ b/app/src/main/res/layout/dialog_transaction.xml
@@ -1,236 +1,253 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#FFF">
-
-    <TextView
-        android:id="@+id/text_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="10dp"
-        android:textSize="20sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="매수 또는 매도" />
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <View
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="#222"
-        app:layout_constraintBottom_toBottomOf="@id/text_title" />
-
-    <ImageView
-        android:id="@+id/image_currency"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        android:background="#ABE"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_title" />
-
-    <TextView
-        android:id="@+id/text_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:textColor="#000"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/image_currency"
-        app:layout_constraintLeft_toRightOf="@id/image_currency"
-        app:layout_constraintTop_toTopOf="@id/image_currency"
-        tools:text="비트코인" />
-
-    <TextView
-        android:id="@+id/text_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:text="@+id/text_price"
-        android:textColor="#000"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@id/image_currency"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/image_currency"
-        tools:text="19,025,100원" />
-
-    <TextView
-        android:id="@+id/text_amount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"
-        android:textColor="#888"
-        android:textSize="18sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image_currency"
-        tools:text="매수량" />
-
-    <TextView
-        android:id="@+id/text_max_amount"
-        android:layout_width="wrap_content"
+        android:id="@+id/view_dim"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="5dp"
-        android:background="?attr/selectableItemBackground"
-        android:gravity="center"
-        android:text="최대로 입력"
-        android:textColor="#00F"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/text_amount"
-        app:layout_constraintLeft_toRightOf="@id/text_amount"
-        app:layout_constraintTop_toTopOf="@id/text_amount" />
+        android:layout_weight="1"
+        android:background="#33000000"/>
 
-    <EditText
-        android:id="@+id/edit_amount"
-        android:layout_width="0dp"
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="5dp"
-        android:inputType="numberDecimal"
-        android:text="0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/text_symbol"
-        app:layout_constraintTop_toBottomOf="@id/text_amount" />
+        android:background="#FFF">
 
-    <TextView
-        android:id="@+id/text_symbol"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:gravity="center"
-        android:textColor="#000"
-        android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@id/edit_amount"
-        app:layout_constraintLeft_toRightOf="@id/edit_amount"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:text="BTC" />
+        <FrameLayout
+            android:id="@+id/frame_title"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:background="@color/app_black"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/text_hold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="@id/edit_amount"
-        app:layout_constraintRight_toRightOf="@id/edit_amount"
-        app:layout_constraintTop_toBottomOf="@id/edit_amount"
-        tools:text="@string/hold_amount_text" />
+            <TextView
+                android:id="@+id/text_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="16dp"
+                android:textColor="@color/app_yellow"
+                android:textSize="15sp"
+                tools:text="매수 또는 매도" />
 
-    <TextView
-        android:id="@+id/text_predict"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="5dp"
-        android:text="예상금액"
-        android:textColor="#888"
-        android:textSize="18sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_hold" />
+            <ImageView
+                android:id="@+id/button_close"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="end|center_vertical"
+                android:layout_marginEnd="16dp" />
+        </FrameLayout>
 
-    <TextView
-        android:id="@+id/text_max_predict"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="5dp"
-        android:background="?attr/selectableItemBackground"
-        android:gravity="center"
-        android:text="최대로 입력"
-        android:textColor="#00F"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/text_predict"
-        app:layout_constraintLeft_toRightOf="@id/text_predict"
-        app:layout_constraintTop_toTopOf="@id/text_predict" />
+        <ImageView
+            android:id="@+id/image_currency"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="29dp"
+            android:layout_marginTop="14dp"
+            android:background="#ABE"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/frame_title" />
 
-    <EditText
-        android:id="@+id/edit_predict_price"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="5dp"
-        android:digits="0123456789,"
-        android:inputType="number"
-        android:maxLength="18"
-        android:text="0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/text_won"
-        app:layout_constraintTop_toBottomOf="@id/text_predict" />
+        <TextView
+            android:id="@+id/text_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:textColor="#000"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@id/image_currency"
+            app:layout_constraintLeft_toRightOf="@id/image_currency"
+            app:layout_constraintTop_toTopOf="@id/image_currency"
+            tools:text="비트코인" />
 
-    <TextView
-        android:id="@+id/text_won"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:gravity="center"
-        android:text="원"
-        android:textColor="#000"
-        android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@id/edit_predict_price"
-        app:layout_constraintLeft_toRightOf="@id/edit_predict_price"
-        app:layout_constraintRight_toRightOf="parent" />
+        <TextView
+            android:id="@+id/text_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="29dp"
+            android:text="@+id/text_price"
+            android:textColor="#000"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/image_currency"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/image_currency"
+            tools:text="19,025,100원" />
 
-    <TextView
-        android:id="@+id/text_krw"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="@id/edit_predict_price"
-        app:layout_constraintRight_toRightOf="@id/edit_predict_price"
-        app:layout_constraintTop_toBottomOf="@id/edit_predict_price"
-        tools:text="@string/hold_krw_text" />
+        <TextView
+            android:id="@+id/text_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:textColor="#888"
+            android:textSize="18sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/image_currency"
+            tools:text="매수량" />
 
-    <TextView
-        android:id="@+id/text_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:textColor="#000"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_krw"
-        tools:text="2.1초" />
+        <TextView
+            android:id="@+id/text_max_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginStart="5dp"
+            android:background="?attr/selectableItemBackground"
+            android:gravity="center"
+            android:text="최대로 입력"
+            android:textColor="#00F"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/text_amount"
+            app:layout_constraintLeft_toRightOf="@id/text_amount"
+            app:layout_constraintTop_toTopOf="@id/text_amount" />
 
-    <TextView
-        android:id="@+id/text_time_help"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_time" />
+        <EditText
+            android:id="@+id/edit_amount"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp"
+            android:inputType="numberDecimal"
+            android:text="0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/text_symbol"
+            app:layout_constraintTop_toBottomOf="@id/text_amount" />
 
-    <ProgressBar
-        android:id="@+id/progress_time"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_time_help" />
+        <TextView
+            android:id="@+id/text_symbol"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
+            android:gravity="center"
+            android:textColor="#000"
+            android:textSize="18sp"
+            app:layout_constraintBaseline_toBaselineOf="@id/edit_amount"
+            app:layout_constraintLeft_toRightOf="@id/edit_amount"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:text="BTC" />
 
-    <Button
-        android:id="@+id/button_cancel"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="취소"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/button_confirm"
-        app:layout_constraintTop_toBottomOf="@id/progress_time" />
+        <TextView
+            android:id="@+id/text_hold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="@id/edit_amount"
+            app:layout_constraintRight_toRightOf="@id/edit_amount"
+            app:layout_constraintTop_toBottomOf="@id/edit_amount"
+            tools:text="@string/hold_amount_text" />
 
-    <Button
-        android:id="@+id/button_confirm"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="확인"
-        app:layout_constraintLeft_toRightOf="@id/button_cancel"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/progress_time" />
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/text_predict"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp"
+            android:text="예상금액"
+            android:textColor="#888"
+            android:textSize="18sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_hold" />
+
+        <TextView
+            android:id="@+id/text_max_predict"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginStart="5dp"
+            android:background="?attr/selectableItemBackground"
+            android:gravity="center"
+            android:text="최대로 입력"
+            android:textColor="#00F"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/text_predict"
+            app:layout_constraintLeft_toRightOf="@id/text_predict"
+            app:layout_constraintTop_toTopOf="@id/text_predict" />
+
+        <EditText
+            android:id="@+id/edit_predict_price"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp"
+            android:digits="0123456789,"
+            android:inputType="number"
+            android:maxLength="18"
+            android:text="0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/text_won"
+            app:layout_constraintTop_toBottomOf="@id/text_predict" />
+
+        <TextView
+            android:id="@+id/text_won"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
+            android:gravity="center"
+            android:text="원"
+            android:textColor="#000"
+            android:textSize="18sp"
+            app:layout_constraintBaseline_toBaselineOf="@id/edit_predict_price"
+            app:layout_constraintLeft_toRightOf="@id/edit_predict_price"
+            app:layout_constraintRight_toRightOf="parent" />
+
+        <TextView
+            android:id="@+id/text_krw"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="@id/edit_predict_price"
+            app:layout_constraintRight_toRightOf="@id/edit_predict_price"
+            app:layout_constraintTop_toBottomOf="@id/edit_predict_price"
+            tools:text="@string/hold_krw_text" />
+
+        <TextView
+            android:id="@+id/text_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:textColor="#000"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_krw"
+            tools:text="2.1초" />
+
+        <TextView
+            android:id="@+id/text_time_help"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_time" />
+
+        <ProgressBar
+            android:id="@+id/progress_time"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_time_help" />
+
+        <TextView
+            android:id="@+id/button_confirm"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:background="#EEE"
+            android:gravity="center"
+            android:padding="17dp"
+            android:text="확인"
+            android:textColor="@color/app_black"
+            android:textSize="15sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/progress_time" />
+    </android.support.constraint.ConstraintLayout>
+</LinearLayout>
